# lsm-kv-store

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: develop-to-release.yml  feature-fix-workflow.yml  release-workflow.yml
docs/: CHANGE_NOTES_ISSUE_19.md  CONFIGURATION.md  CONTRIBUTING.md  RELEASE_NOTES_v1.3.0.md  SETUP.md
docs/implementation-plans/: IMPLEMENTATION_PLAN_31_36.md  global-shared-cache.md
docs/tech-debts/: plan-integration-v1.3.0.md  resolution-v1.3.0-sstable-reader-implementation.md  review-v1.3.0-sstable-reader-missing.md
examples/: basic.rs  demo.rs  generate_high_entropy_data.py
requests/: api.rest  features.rest
src/: api.rs  codec.rs  engine.rs  error.rs  features.rs  lib.rs  main.rs  sstable.rs  wal.rs
src/api/: config.rs  mod.rs
src/cli/: mod.rs
src/core/: engine.rs  log_record.rs  memtable.rs  mod.rs
src/features/: mod.rs
src/infra/: codec.rs  config.rs  error.rs
src/storage/: block.rs  builder.rs  cache.rs  config.rs  mod.rs  reader.rs  wal.rs
src/storage/sstable/: mod.rs
tests/: integration_sstable_v2.rs  restart.rs
