[package]
name = "lsm-kv-store"
version = "0.1.0"
edition = "2021"
authors = ["Elío Neto <seu@email.com>"]
description = "High-performance Key-Value Store using LSM-Tree architecture"
repository = "https://github.com/ElioNeto/lsm-kv-store"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.3"

# Checksum & Bloom Filter
crc32fast = "1.3"
bloomfilter = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & debugging
tracing = "0.1"
tracing-subscriber = "0.3"

# File I/O optimization
memmap2 = "0.9"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
rand = "0.8"

[[bench]]
name = "lsm_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[lib]
name = "lsm_kv_store"
path = "src/lib.rs"
