[package]
name = "lsm-kv-store"
version = "0.1.0"
edition = "2021"
authors = ["Elio Neto <seuemail.com>"]
description = "High-performance Key-Value Store using LSM-Tree architecture"
repository = "https://github.com/ElioNeto/lsm-kv-store"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.3.3"
serde_json = "1.0"

# Checksum & Bloom Filter
crc32fast = "1.3"
bloomfilter = "3"

# Error handling
thiserror = "1.0"

# Logging & debugging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP Server (opcionais)
actix-web = { version = "4", optional = true }
actix-cors = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[[bin]]
name = "lsm-kv-store"
path = "src/main.rs"

[[bin]]
name = "lsm-server"
path = "src/bin/server.rs"
required-features = ["api"]

[features]
default = []
api = ["actix-web", "actix-cors", "tokio"]
